# cippi

cippi/: LICENSE  pyproject.toml  setup.cfg  tox.ini
cippi/tests/: fake_test.py
