[metadata]
name = cippi
version = 0.0.1
author = Viet Ly
author_email = vietly.development@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
test_suite=
url = https://github.com/vietly23/cippi
project_urls =
    Bug Tracker = https://github.com/vietly23/cippi
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
